--- a/WebApp/src/main/webapp/i18n/en/student.json
+++ b/WebApp/src/main/webapp/i18n/en/student.json
@@ -24,6 +24,7 @@
       "gender": "Gender",
       "email": "Email",
       "registrationDate": "Registration Date",
+      "profile": "Profile",
       "course": "Course"
     }
   }
